cluster/apps/librephotos/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: librephotos
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: librephotos
      app.kubernetes.io/component: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: librephotos
        app.kubernetes.io/component: backend
    spec:
      containers:
      - name: backend
        image: reallibrephotos/librephotos:dev
        volumeMounts:
          - mountPath: /data
            name: data
          - mountPath: /protected_media
            name: media
        ports:
          - containerPort: 8001
      nodeSelector:
        node-role.kubernetes.io/worker: worker
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: librephotos-data
        - name: media
          persistentVolumeClaim:
            claimName: librephotos-media
