cluster/apps/librephotos/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: librephotos
      app.kubernetes.io/component: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: librephotos
        app.kubernetes.io/component: frontend
    spec:
      containers:
      - name: frontend
        image: reallibrephotos/librephotos-frontend
      nodeSelector:
        node-role.kubernetes.io/worker: worker
