cluster/apps/librephotos/proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
  namespace: librephotos
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: librephotos
      app.kubernetes.io/component: proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: librephotos
        app.kubernetes.io/component: proxy
    spec:
      containers:
      - name: proxy
        image: reallibrephotos/librephotos-proxy:dev
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /data
            name: data
          - mountPath: /protected_media
            name: media
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: librephotos-data
        - name: media
          persistentVolumeClaim:
            claimName: librephotos-media
