cluster/apps/librephotos/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: librephotos
spec:
  selector:
    app.kubernetes.io/name: librephotos
    app.kubernetes.io/component: backend
  ports:
  - port: 8001
