cluster/apps/librephotos/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: librephotos
spec:
  selector:
    app.kubernetes.io/name: librephotos
    app.kubernetes.io/component: postgres
  ports:
  - port: 5432
