cluster/apps/librephotos/proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy
  namespace: librephotos
spec:
  selector:
    app.kubernetes.io/name: librephotos
    app.kubernetes.io/component: proxy
  ports:
  - port: 80
